阶段性提交

--- a/src/main/resources/static/views/header.html
+++ b/src/main/resources/static/views/header.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="../css/header.css" />
-<!--<script src="../js/header.js" type="text/javascript" charset="utf-8"></script>-->
+<script src="../js/httpUtils.js" type="text/javascript" charset="utf-8"></script>
 <div class="nav index" style="height: 80px;">
 	<div class="layui-container">
 		<!-- 公司logo -->
@@ -20,7 +20,7 @@
 				<li class="layui-nav-item"><a href="#"></a></li>-->
 
 			<!--	<li class="layui-nav-item"><a id="cs"><img src="../img/header/s.png"></a></li>-->
-				<li class="layui-nav-item"><a href="/cart"><img src="../img/header/shop.png"></a></li>
+				<li class="layui-nav-item"><a href="javascript:page_jump('/cart');"><img src="../img/header/shop.png"></a></li>
 				<li class="layui-nav-item"><a href="/login"><img src="../img/header/login.png"></a></li>
 
 				<span class="layui-nav-bar" style="left: 342px; top: 78px; width: 0px; opacity: 0;"></span>
