--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -3,14 +3,13 @@
     <head>
         <meta charset="utf-8"/>
         <title>魅族官网</title>
+        <link rel="stylesheet" type="text/css" href="../css/reset.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/index.css"/>
+        <link rel="stylesheet" type="text/css" href="../lib/swiper/swiper.min.css"/>
         <script src="../js/jquery-3.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../lib/swiper/swiper.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/httpUtils.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/index.js" type="text/javascript" charset="utf-8"></script>
-        <link rel="stylesheet" type="text/css" href="../css/reset.css"/>
-        <link rel="stylesheet" type="text/css" href="../css/index.css"/>
-        <link rel="stylesheet" type="text/css" href="../lib/swiper/swiper.min.css"/>
-
     </head>
     <body>
         <div class="header-all"></div>
@@ -41,8 +40,8 @@
 
             <div class="remai xinpin">
                 <div class="container">
-                    <ul class="clearfix">
-                        <li class="fl">
+                    <ul id="products" class="clearfix">
+                       <!-- <li class="fl">
                             <div class="small_phone">
                                 <a href="/details">
                                     <span>新品</span>
@@ -124,7 +123,7 @@
                         <li class="fl">
                             <div class="small_phone">
                                 <a href="details.html">
-                                    <!-- <span>新品</span> -->
+                                    &lt;!&ndash; <span>新品</span> &ndash;&gt;
                                     <div class="box">
                                         <p class="p1">魅族 EP52 Lite 蓝牙耳机</p>
                                         <p class="p2">生物纤维振膜|8小时续航|IPX5级防水|轻巧亲肤</p>
@@ -137,7 +136,7 @@
                         <li class="fl">
                             <div class="small_phone">
                                 <a href="details.html">
-                                    <!-- <span>新品</span> -->
+                                    &lt;!&ndash; <span>新品</span> &ndash;&gt;
                                     <div class="box">
                                         <p class="p1">魅族 EP2X 耳机</p>
                                         <p class="p2">一体式线控 | 3.5mm接口 |流线设计</p>
@@ -151,7 +150,7 @@
                         <li class="fl">
                             <div class="small_phone">
                                 <a href="details.html">
-                                    <!-- <span>新品</span> -->
+                                    &lt;!&ndash; <span>新品</span> &ndash;&gt;
                                     <div class="box">
                                         <p class="p1_name">MEIZU UR 高端定制耳机 预约</p>
                                         <p class="p2_name">【预约专用】私人定制，为你而声</p>
@@ -164,7 +163,7 @@
                         <li class="fl">
                             <div class="small_phone">
                                 <a href="details.html">
-                                    <!-- <span>领券</span> -->
+                                    &lt;!&ndash; <span>领券</span> &ndash;&gt;
                                     <div class="box">
                                         <p class="p1">魅族 EP21耳机</p>
                                         <p class="p2">三键一体式线控 | 3.5mm接口 </p>
@@ -177,7 +176,7 @@
                         <li class="fl">
                             <div class="small_phone">
                                 <a href="details.html">
-                                    <!-- <span>新品</span> -->
+                                    &lt;!&ndash; <span>新品</span> &ndash;&gt;
                                     <div class="box">
                                         <p class="p1">魅族 LIVE 四单元动铁耳机</p>
                                         <p class="p2">Knowles四动铁 双通道导音系统 现场级音乐表现</p>
@@ -190,7 +189,7 @@
                         <li class="fl">
                             <div class="small_phone">
                                 <a href="details.html">
-                                    <!-- <span>新品</span> -->
+                                    &lt;!&ndash; <span>新品</span> &ndash;&gt;
                                     <div class="box">
                                         <p class="p1">魅族 HALO 激光蓝牙耳机</p>
                                         <p class="p2">炫酷夜跑神器 随性张扬</p>
@@ -199,7 +198,7 @@
                                     <img src="../img/index/meizu24.png">
                                 </a>
                             </div>
-                        </li>
+                        </li>-->
                     </ul>
                 </div>
             </div>
