--- a/src/main/resources/static/views/header.html
+++ b/src/main/resources/static/views/header.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="../css/header.css" />
-<script src="../js/httpUtils.js" type="text/javascript" charset="utf-8"></script>
+<script src="../js/utils.js" type="text/javascript" charset="utf-8"></script>
 <div class="nav index" style="height: 80px;">
 	<div class="layui-container">
 		<!-- 公司logo -->
