--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="../lib/swiper/swiper.min.css"/>
         <script src="../js/jquery-3.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../lib/swiper/swiper.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../js/httpUtils.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../js/utils.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/index.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body>
