--- a/src/main/resources/static/views/login.html
+++ b/src/main/resources/static/views/login.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../css/reset.css"/>
         <link rel="stylesheet" type="text/css" href="../css/login.css"/>
         <script src="../js/jquery-3.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../js/httpUtils.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../js/utils.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/login.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body>
